recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:2: error: '(' expected but identifier found.
  if steps = 0 return null
     ^